--- a/STM32CubeIDE/pendant2021-stm32wl.ioc
+++ b/STM32CubeIDE/pendant2021-stm32wl.ioc
@@ -1,16 +1,37 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI2_RX
+Dma.RequestsNb=1
+Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.0.EventEnable=DISABLE
+Dma.SPI2_RX.0.Instance=DMA1_Channel1
+Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.0.Mode=DMA_NORMAL
+Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.0.RequestNumber=1
+Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.0.SignalID=NONE
+Dma.SPI2_RX.0.SyncEnable=DISABLE
+Dma.SPI2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.0.SyncRequestNumber=1
+Dma.SPI2_RX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x40000A0B
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode,OwnAddress
+I2C2.OwnAddress=0x33
+I2C2.Timing=0x2010091A
 I2S2.AudioFreq=I2S_AUDIOFREQ_22K
 I2S2.DataFormat=I2S_DATAFORMAT_24B
-I2S2.ErrorAudioFreq=-5.3 %
+I2S2.ErrorAudioFreq=0.26 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,DataFormat,AudioFreq
 I2S2.Instance=SPI$Index
 I2S2.Mode=I2S_MODE_MASTER_RX
-I2S2.RealAudioFreq=20.833 KHz
+I2S2.RealAudioFreq=22.058 KHz
 I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 LORAWAN.Activate_BOARD_RESOURCES=none
@@ -30,21 +51,23 @@ LORAWAN.STATIC_DEVICE_EUI=false
 Mcu.Family=STM32WL
 Mcu.IP0=ADV_TRACE
 Mcu.IP1=CRC
-Mcu.IP10=SEQUENCER
-Mcu.IP11=SUBGHZ
-Mcu.IP12=SYS
-Mcu.IP13=TIMER
-Mcu.IP14=TINY_LPM
-Mcu.IP15=USART2
+Mcu.IP10=RNG
+Mcu.IP11=RTC
+Mcu.IP12=SEQUENCER
+Mcu.IP13=SUBGHZ
+Mcu.IP14=SYS
+Mcu.IP15=TIMER
+Mcu.IP16=TINY_LPM
+Mcu.IP17=USART2
 Mcu.IP2=DEBUG
-Mcu.IP3=I2C2
-Mcu.IP4=I2S2
-Mcu.IP5=LORAWAN
-Mcu.IP6=MISC
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=RTC
-Mcu.IPNb=16
+Mcu.IP3=DMA
+Mcu.IP4=I2C2
+Mcu.IP5=I2S2
+Mcu.IP6=LORAWAN
+Mcu.IP7=MISC
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=18
 Mcu.Name=STM32WLE5CCUx
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA2
@@ -57,15 +80,16 @@ Mcu.Pin14=VP_ADV_TRACE_VS_ADV_TRACE
 Mcu.Pin15=VP_CRC_VS_CRC
 Mcu.Pin16=VP_LORAWAN_VS_LoRaWAN
 Mcu.Pin17=VP_MISC_VS_MISC
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_RTC_VS_RTC_Calendar
+Mcu.Pin18=VP_RNG_VS_RNG
+Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PA8
-Mcu.Pin20=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin21=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin22=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIMER_VS_TIMER
-Mcu.Pin25=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin20=VP_RTC_VS_RTC_Calendar
+Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin22=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin23=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIMER_VS_TIMER
+Mcu.Pin26=VP_TINY_LPM_VS_TINY_LPM
 Mcu.Pin3=PA9
 Mcu.Pin4=OSC_IN
 Mcu.Pin5=OSC_OUT
@@ -73,21 +97,26 @@ Mcu.Pin6=PB12
 Mcu.Pin7=PA10
 Mcu.Pin8=PA11
 Mcu.Pin9=PA12
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1);RTC_USE_HSE,0
 Mcu.UserName=STM32WLE5CCUx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.RNG_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SUBGHZ_Radio_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -200,51 +229,49 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_RTC_Init-RTC-true-HAL-false,8-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,9-MX_LoRaWAN_Init-LORAWAN-false-HAL-false
-RCC.AHBFreq_Value=12000000
-RCC.APB1Freq_Value=12000000
-RCC.APB1TimFreq_Value=12000000
-RCC.APB2Freq_Value=12000000
-RCC.APB2TimFreq_Value=12000000
-RCC.APB3Freq_Value=12000000
-RCC.CortexFreq_Value=12000000
-RCC.FCLKCortexFreq_Value=12000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,10-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,11-MX_RNG_Init-RNG-false-HAL-true
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
+RCC.APB2Freq_Value=48000000
+RCC.APB2TimFreq_Value=48000000
+RCC.APB3Freq_Value=48000000
+RCC.CortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.HCLK3Freq_Value=12000000
-RCC.HCLKFreq_Value=12000000
-RCC.HSEPRES=2
+RCC.HCLK3Freq_Value=48000000
+RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=32000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=12000000
-RCC.I2C2Freq_Value=12000000
-RCC.I2C3Freq_Value=12000000
+RCC.I2C1Freq_Value=48000000
+RCC.I2C2Freq_Value=48000000
+RCC.I2C3Freq_Value=48000000
 RCC.I2S2CLockSelection=RCC_I2S2CLKSOURCE_PLL
-RCC.I2S2Freq_Value=12000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLK3Freq_Value,HCLKFreq_Value,HSEPRES,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S2CLockSelection,I2S2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,MCO1PinFreq_Value,MSIClockRange,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGCLockSelection,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIM1Freq_Value=12000000
-RCC.LPTIM2Freq_Value=12000000
-RCC.LPTIM3Freq_Value=12000000
-RCC.LPUART1Freq_Value=12000000
+RCC.I2S2Freq_Value=48000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLK3Freq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S2CLockSelection,I2S2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,MCO1PinFreq_Value,MSIClockRange,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGCLockSelection,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.LPTIM1Freq_Value=48000000
+RCC.LPTIM2Freq_Value=48000000
+RCC.LPTIM3Freq_Value=48000000
+RCC.LPUART1Freq_Value=48000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
-RCC.MCO1PinFreq_Value=12000000
+RCC.MCO1PinFreq_Value=48000000
 RCC.MSIClockRange=RCC_MSIRANGE_9
+RCC.PLLM=RCC_PLLM_DIV2
 RCC.PLLN=6
 RCC.PLLPoutputFreq_Value=48000000
-RCC.PLLQ=RCC_PLLQ_DIV8
-RCC.PLLQoutputFreq_Value=12000000
-RCC.PLLR=RCC_PLLR_DIV8
-RCC.PLLRCLKFreq_Value=12000000
+RCC.PLLQoutputFreq_Value=48000000
+RCC.PLLRCLKFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=12000000
+RCC.PWRFreq_Value=48000000
 RCC.RNGCLockSelection=RCC_RNGCLKSOURCE_LSE
 RCC.RNGFreq_Value=32768
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SYSCLKFreq_VALUE=12000000
+RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USART1Freq_Value=12000000
-RCC.USART2Freq_Value=12000000
+RCC.USART1Freq_Value=48000000
+RCC.USART2Freq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.WatchDogFreq_Value=32000
@@ -266,6 +293,8 @@ VP_LORAWAN_VS_LoRaWAN.Mode=LoRaWAN_Enabled
 VP_LORAWAN_VS_LoRaWAN.Signal=LORAWAN_VS_LoRaWAN
 VP_MISC_VS_MISC.Mode=MISC_Enabled
 VP_MISC_VS_MISC.Signal=MISC_VS_MISC
+VP_RNG_VS_RNG.Mode=RNG_Activate
+VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
