Add developer appkey.

--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -18,8 +18,8 @@ LORAWAN.IPParameters=REGION_EU868,IS_DCDC_SUPPORTED,Activate_BOARD_RESOURCES,Act
 LORAWAN.IS_DCDC_SUPPORTED=false
 LORAWAN.LORAWAN_APP_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
 LORAWAN.LORAWAN_APP_S_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
-LORAWAN.LORAWAN_JOIN_EUI=70, B3, D5, 7E, D0, 03, B4, EA
-LORAWAN.LORAWAN_JOIN_EUI_HEX=0x70, 0xB3, 0xD5, 0x7E, 0xD0, 0x03, 0xB4, 0xEA
+LORAWAN.LORAWAN_JOIN_EUI=00, 00, 00, 00, 00, 00, 00, 00
+LORAWAN.LORAWAN_JOIN_EUI_HEX=0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 LORAWAN.LORAWAN_NWK_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
 LORAWAN.LORAWAN_NWK_S_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
 LORAWAN.MW_LOG_ENABLED=true
