--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -1,6 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.IPParameters=Timing,I2C_Speed_Mode
+I2C1.Timing=0x00100413
 I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=Timing,OwnAddress,I2C_Speed_Mode
 I2C2.OwnAddress=0x33
@@ -29,52 +32,55 @@ LORAWAN.STATIC_DEVICE_EUI=false
 Mcu.Family=STM32WL
 Mcu.IP0=ADV_TRACE
 Mcu.IP1=CRC
-Mcu.IP10=RTC
-Mcu.IP11=SEQUENCER
-Mcu.IP12=SUBGHZ
-Mcu.IP13=SYS
-Mcu.IP14=TIMER
-Mcu.IP15=TINY_LPM
-Mcu.IP16=USART2
+Mcu.IP10=RNG
+Mcu.IP11=RTC
+Mcu.IP12=SEQUENCER
+Mcu.IP13=SUBGHZ
+Mcu.IP14=SYS
+Mcu.IP15=TIMER
+Mcu.IP16=TINY_LPM
+Mcu.IP17=USART2
 Mcu.IP2=DEBUG
-Mcu.IP3=I2C2
-Mcu.IP4=I2S2
-Mcu.IP5=LORAWAN
-Mcu.IP6=MISC
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=RNG
-Mcu.IPNb=17
+Mcu.IP3=I2C1
+Mcu.IP4=I2C2
+Mcu.IP5=I2S2
+Mcu.IP6=LORAWAN
+Mcu.IP7=MISC
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=18
 Mcu.Name=STM32WLE5CCUx
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA2
-Mcu.Pin1=PA7
-Mcu.Pin10=PA13
-Mcu.Pin11=PC14-OSC32_IN
-Mcu.Pin12=PC15-OSC32_OUT
-Mcu.Pin13=PA14
-Mcu.Pin14=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin15=VP_CRC_VS_CRC
-Mcu.Pin16=VP_LORAWAN_VS_LoRaWAN
-Mcu.Pin17=VP_MISC_VS_MISC
-Mcu.Pin18=VP_RNG_VS_RNG
-Mcu.Pin19=VP_RTC_VS_RTC_Activate
-Mcu.Pin2=PA8
-Mcu.Pin20=VP_RTC_VS_RTC_Calendar
-Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin22=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin23=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIMER_VS_TIMER
-Mcu.Pin26=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin3=PA9
-Mcu.Pin4=OSC_IN
-Mcu.Pin5=OSC_OUT
-Mcu.Pin6=PB12
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=27
+Mcu.Pin0=PB6
+Mcu.Pin1=PB7
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PC14-OSC32_IN
+Mcu.Pin14=PC15-OSC32_OUT
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin17=VP_CRC_VS_CRC
+Mcu.Pin18=VP_LORAWAN_VS_LoRaWAN
+Mcu.Pin19=VP_MISC_VS_MISC
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_RNG_VS_RNG
+Mcu.Pin21=VP_RTC_VS_RTC_Activate
+Mcu.Pin22=VP_RTC_VS_RTC_Calendar
+Mcu.Pin23=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin24=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin25=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIMER_VS_TIMER
+Mcu.Pin28=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin3=PA7
+Mcu.Pin4=PA8
+Mcu.Pin5=PA9
+Mcu.Pin6=OSC_IN
+Mcu.Pin7=OSC_OUT
+Mcu.Pin8=PB12
+Mcu.Pin9=PA10
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1);RTC_USE_HSE,0
 Mcu.UserName=STM32WLE5CCUx
@@ -84,6 +90,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -102,8 +110,12 @@ OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
 PA10.Mode=Half_Duplex_Master
 PA10.Signal=I2S2_SD
+PA11.GPIOParameters=GPIO_Speed
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.Mode=I2C
 PA11.Signal=I2C2_SDA
+PA12.GPIOParameters=GPIO_Speed
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.Mode=I2C
 PA12.Signal=I2C2_SCL
 PA13.Mode=Serial_Wire
@@ -126,6 +138,17 @@ PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB12.Mode=Half_Duplex_Master
 PB12.Signal=I2S2_WS
+PB6.GPIOParameters=GPIO_FM6,GPIO_Speed
+PB6.GPIO_FM6=SYSCFG_FASTMODEPLUS_PB6
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Speed,GPIO_FM7
+PB7.GPIO_FM7=SYSCFG_FASTMODEPLUS_PB7
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -203,7 +226,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_RTC_Init-RTC-true-HAL-false,8-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,9-MX_LoRaWAN_Init-LORAWAN-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,10-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,11-MX_RNG_Init-RNG-false-HAL-true
 RCC.AHBFreq_Value=12000000
 RCC.APB1Freq_Value=12000000
 RCC.APB1TimFreq_Value=12000000
