--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -2,43 +2,25 @@
 ADC.IPParameters=NbrOfConversion,SelectedChannel
 ADC.NbrOfConversion=1
 ADC.SelectedChannel=ADC_CHANNEL_VREFINT
-Dma.Request0=USART2_RX
-Dma.Request1=USART2_TX
-Dma.RequestsNb=2
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.EventEnable=DISABLE
-Dma.USART2_RX.0.Instance=DMA1_Channel1
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestNumber=1
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART2_RX.0.SignalID=NONE
-Dma.USART2_RX.0.SyncEnable=DISABLE
-Dma.USART2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART2_RX.0.SyncRequestNumber=1
-Dma.USART2_RX.0.SyncSignalID=NONE
-Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.1.EventEnable=DISABLE
-Dma.USART2_TX.1.Instance=DMA1_Channel2
-Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.1.Mode=DMA_NORMAL
-Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.1.RequestNumber=1
-Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART2_TX.1.SignalID=NONE
-Dma.USART2_TX.1.SyncEnable=DISABLE
-Dma.USART2_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART2_TX.1.SyncRequestNumber=1
-Dma.USART2_TX.1.SyncSignalID=NONE
+Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.0.EventEnable=DISABLE
+Dma.MEMTOMEM.0.Instance=DMA1_Channel1
+Dma.MEMTOMEM.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.MEMTOMEM.0.MemInc=DMA_MINC_ENABLE
+Dma.MEMTOMEM.0.Mode=DMA_NORMAL
+Dma.MEMTOMEM.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.MEMTOMEM.0.PeriphInc=DMA_PINC_ENABLE
+Dma.MEMTOMEM.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_LOW
+Dma.MEMTOMEM.0.RequestNumber=1
+Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.MEMTOMEM.0.SignalID=NONE
+Dma.MEMTOMEM.0.SyncEnable=DISABLE
+Dma.MEMTOMEM.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.MEMTOMEM.0.SyncRequestNumber=1
+Dma.MEMTOMEM.0.SyncSignalID=NONE
+Dma.Request0=MEMTOMEM
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -173,8 +155,6 @@ Mcu.UserName=STM32WLE5CCUx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -320,7 +300,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-false,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-false,10-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,11-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_ADC_Init-ADC-true-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-false,10-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,11-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_ADC_Init-ADC-true-HAL-false
 RCC.AHBFreq_Value=12000000
 RCC.APB1Freq_Value=12000000
 RCC.APB1TimFreq_Value=12000000
