--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -37,10 +37,11 @@ I2S2.Instance=SPI$Index
 I2S2.RealAudioFreq=7.978 KHz
 I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
-LORAWAN.APP_TX_DUTYCYCLE=20000
+LORAWAN.APP_TX_DUTYCYCLE=10000
 LORAWAN.Activate_BOARD_RESOURCES=none
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=UserBoard
-LORAWAN.IPParameters=REGION_EU868,IS_DCDC_SUPPORTED,Activate_BOARD_RESOURCES,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_JOIN_EUI,MW_LOG_ENABLED,LORAWAN_APP_KEY,STATIC_DEVICE_ADDRESS,LORAWAN_NWK_KEY,LORAWAN_NWK_S_KEY,LORAWAN_APP_S_KEY,LORAWAN_JOIN_EUI_HEX,SUBGHZ_APPLICATION,USE_LPM,APP_TX_DUTYCYCLE,LORAWAN_USER_APP_PORT,LORAWAN_ADR_STATE
+LORAWAN.DEBUGGER_ON=true
+LORAWAN.IPParameters=REGION_EU868,IS_DCDC_SUPPORTED,Activate_BOARD_RESOURCES,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_JOIN_EUI,MW_LOG_ENABLED,LORAWAN_APP_KEY,STATIC_DEVICE_ADDRESS,LORAWAN_NWK_KEY,LORAWAN_NWK_S_KEY,LORAWAN_APP_S_KEY,LORAWAN_JOIN_EUI_HEX,SUBGHZ_APPLICATION,USE_LPM,APP_TX_DUTYCYCLE,LORAWAN_USER_APP_PORT,LORAWAN_ADR_STATE,LOW_POWER_DISABLE,DEBUGGER_ON,VERBOSE_LEVEL
 LORAWAN.IS_DCDC_SUPPORTED=false
 LORAWAN.LORAWAN_ADR_STATE=LORAMAC_HANDLER_ADR_ON
 LORAWAN.LORAWAN_APP_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
@@ -50,12 +51,14 @@ LORAWAN.LORAWAN_JOIN_EUI_HEX=0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 LORAWAN.LORAWAN_NWK_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
 LORAWAN.LORAWAN_NWK_S_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
 LORAWAN.LORAWAN_USER_APP_PORT=1
+LORAWAN.LOW_POWER_DISABLE=true
 LORAWAN.MW_LOG_ENABLED=true
 LORAWAN.REGION_EU868=false
 LORAWAN.STATIC_DEVICE_ADDRESS=false
 LORAWAN.STATIC_DEVICE_EUI=false
 LORAWAN.SUBGHZ_APPLICATION=LORA_END_NODE
 LORAWAN.USE_LPM=true
+LORAWAN.VERBOSE_LEVEL=VLEVEL_H
 LoRaWAN.BSP.number=3
 LoRaWAN0.BSP.STBoard=false
 LoRaWAN0.BSP.api=Unknown
@@ -119,36 +122,38 @@ Mcu.Name=STM32WLE5CCUx
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PB6
 Mcu.Pin1=PB7
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PC14-OSC32_IN
-Mcu.Pin15=PC15-OSC32_OUT
-Mcu.Pin16=PA14
-Mcu.Pin17=VP_ADC_Vref_Input
-Mcu.Pin18=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin19=VP_CRC_VS_CRC
+Mcu.Pin10=OSC_OUT
+Mcu.Pin11=PB12
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PC14-OSC32_IN
+Mcu.Pin17=PC15-OSC32_OUT
+Mcu.Pin18=PA14
+Mcu.Pin19=VP_ADC_Vref_Input
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_LORAWAN_VS_LoRaWAN
-Mcu.Pin21=VP_MISC_VS_MISC
-Mcu.Pin22=VP_RNG_VS_RNG
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin24=VP_RTC_VS_RTC_Calendar
-Mcu.Pin25=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin26=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin27=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIMER_VS_TIMER
+Mcu.Pin20=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin21=VP_CRC_VS_CRC
+Mcu.Pin22=VP_LORAWAN_VS_LoRaWAN
+Mcu.Pin23=VP_MISC_VS_MISC
+Mcu.Pin24=VP_RNG_VS_RNG
+Mcu.Pin25=VP_RTC_VS_RTC_Activate
+Mcu.Pin26=VP_RTC_VS_RTC_Calendar
+Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin28=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin29=VP_SUBGHZ_VS_SUBGHZ
 Mcu.Pin3=PA3
-Mcu.Pin30=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin4=PA7
-Mcu.Pin5=PA8
-Mcu.Pin6=PA9
-Mcu.Pin7=OSC_IN
-Mcu.Pin8=OSC_OUT
-Mcu.Pin9=PB12
-Mcu.PinsNb=31
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIMER_VS_TIMER
+Mcu.Pin32=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA7
+Mcu.Pin7=PA8
+Mcu.Pin8=PA9
+Mcu.Pin9=OSC_IN
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1);RTC_USE_HSE,0
 Mcu.UserName=STM32WLE5CCUx
@@ -196,6 +201,14 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=ACCEL_INT1
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=BQ_INT
+PA5.Locked=true
+PA5.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Speed,GPIO_Label
 PA7.GPIO_Label=RF_CTRL_2
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
