Make logging work.

--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -41,15 +41,15 @@ LORAWAN.APP_TX_DUTYCYCLE=10000
 LORAWAN.Activate_BOARD_RESOURCES=none
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=UserBoard
 LORAWAN.DEBUGGER_ON=true
-LORAWAN.IPParameters=REGION_EU868,IS_DCDC_SUPPORTED,Activate_BOARD_RESOURCES,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_JOIN_EUI,MW_LOG_ENABLED,LORAWAN_APP_KEY,STATIC_DEVICE_ADDRESS,LORAWAN_NWK_KEY,LORAWAN_NWK_S_KEY,LORAWAN_APP_S_KEY,LORAWAN_JOIN_EUI_HEX,SUBGHZ_APPLICATION,USE_LPM,APP_TX_DUTYCYCLE,LORAWAN_USER_APP_PORT,LORAWAN_ADR_STATE,LOW_POWER_DISABLE,DEBUGGER_ON,VERBOSE_LEVEL
+LORAWAN.IPParameters=REGION_EU868,IS_DCDC_SUPPORTED,Activate_BOARD_RESOURCES,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_JOIN_EUI,MW_LOG_ENABLED,LORAWAN_APP_KEY,STATIC_DEVICE_ADDRESS,LORAWAN_NWK_KEY,LORAWAN_NWK_S_KEY,LORAWAN_APP_S_KEY,SUBGHZ_APPLICATION,USE_LPM,APP_TX_DUTYCYCLE,LORAWAN_USER_APP_PORT,LORAWAN_ADR_STATE,LOW_POWER_DISABLE,DEBUGGER_ON,VERBOSE_LEVEL,KEY_EXTRACTABLE
 LORAWAN.IS_DCDC_SUPPORTED=false
+LORAWAN.KEY_EXTRACTABLE=false
 LORAWAN.LORAWAN_ADR_STATE=LORAMAC_HANDLER_ADR_ON
-LORAWAN.LORAWAN_APP_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
-LORAWAN.LORAWAN_APP_S_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
-LORAWAN.LORAWAN_JOIN_EUI=00, 00, 00, 00, 00, 00, 00, 00
-LORAWAN.LORAWAN_JOIN_EUI_HEX=0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
-LORAWAN.LORAWAN_NWK_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
-LORAWAN.LORAWAN_NWK_S_KEY=00,00,00,00,00,00,00,00,00,00,00,00,00,00,00,00
+LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
+LORAWAN.LORAWAN_APP_S_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
+LORAWAN.LORAWAN_JOIN_EUI=01, 01, 01, 01, 01, 01, 01, 01
+LORAWAN.LORAWAN_NWK_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
+LORAWAN.LORAWAN_NWK_S_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_USER_APP_PORT=1
 LORAWAN.LOW_POWER_DISABLE=true
 LORAWAN.MW_LOG_ENABLED=true
