--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -2,25 +2,25 @@
 ADC.IPParameters=NbrOfConversion,SelectedChannel
 ADC.NbrOfConversion=1
 ADC.SelectedChannel=ADC_CHANNEL_VREFINT
-Dma.MEMTOMEM.0.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.0.EventEnable=DISABLE
-Dma.MEMTOMEM.0.Instance=DMA1_Channel1
-Dma.MEMTOMEM.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.MEMTOMEM.0.MemInc=DMA_MINC_ENABLE
-Dma.MEMTOMEM.0.Mode=DMA_NORMAL
-Dma.MEMTOMEM.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.MEMTOMEM.0.PeriphInc=DMA_PINC_ENABLE
-Dma.MEMTOMEM.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.MEMTOMEM.0.Priority=DMA_PRIORITY_LOW
-Dma.MEMTOMEM.0.RequestNumber=1
-Dma.MEMTOMEM.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.MEMTOMEM.0.SignalID=NONE
-Dma.MEMTOMEM.0.SyncEnable=DISABLE
-Dma.MEMTOMEM.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.MEMTOMEM.0.SyncRequestNumber=1
-Dma.MEMTOMEM.0.SyncSignalID=NONE
-Dma.Request0=MEMTOMEM
+Dma.Request0=SPI2_RX
 Dma.RequestsNb=1
+Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.0.EventEnable=DISABLE
+Dma.SPI2_RX.0.Instance=DMA1_Channel1
+Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.0.Mode=DMA_NORMAL
+Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.0.RequestNumber=1
+Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.0.SignalID=NONE
+Dma.SPI2_RX.0.SyncEnable=DISABLE
+Dma.SPI2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.0.SyncRequestNumber=1
+Dma.SPI2_RX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -30,11 +30,15 @@ I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=Timing,OwnAddress,I2C_Speed_Mode
 I2C2.OwnAddress=0x33
 I2C2.Timing=0x00100413
-I2S2.ErrorAudioFreq=-0.27 %
+I2S2.AudioFreq=I2S_AUDIOFREQ_11K
+I2S2.DataFormat=I2S_DATAFORMAT_24B
+I2S2.ErrorAudioFreq=0.26 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,Standard,Mode
 I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=7.978 KHz
+I2S2.Mode=I2S_MODE_MASTER_RX
+I2S2.RealAudioFreq=11.029 KHz
+I2S2.Standard=I2S_STANDARD_MSB
 I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 LORAWAN.APP_TX_DUTYCYCLE=10000
@@ -160,6 +164,7 @@ Mcu.UserName=STM32WLE5CCUx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
