--- a/STM32CubeIDE/lorawan-stm32wl.ioc
+++ b/STM32CubeIDE/lorawan-stm32wl.ioc
@@ -55,7 +55,7 @@ LORAWAN.LORAWAN_JOIN_EUI=01, 01, 01, 01, 01, 01, 01, 01
 LORAWAN.LORAWAN_NWK_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_NWK_S_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_USER_APP_PORT=1
-LORAWAN.LOW_POWER_DISABLE=true
+LORAWAN.LOW_POWER_DISABLE=false
 LORAWAN.MW_LOG_ENABLED=true
 LORAWAN.REGION_EU868=false
 LORAWAN.STATIC_DEVICE_ADDRESS=false
@@ -104,16 +104,17 @@ Mcu.Family=STM32WL
 Mcu.IP0=ADC
 Mcu.IP1=ADV_TRACE
 Mcu.IP10=NVIC
-Mcu.IP11=RCC
-Mcu.IP12=RNG
-Mcu.IP13=RTC
-Mcu.IP14=SEQUENCER
-Mcu.IP15=SUBGHZ
-Mcu.IP16=SYS
-Mcu.IP17=TIMER
-Mcu.IP18=TINY_LPM
-Mcu.IP19=USART2
+Mcu.IP11=PWR
+Mcu.IP12=RCC
+Mcu.IP13=RNG
+Mcu.IP14=RTC
+Mcu.IP15=SEQUENCER
+Mcu.IP16=SUBGHZ
+Mcu.IP17=SYS
+Mcu.IP18=TIMER
+Mcu.IP19=TINY_LPM
 Mcu.IP2=CRC
+Mcu.IP20=USART2
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
 Mcu.IP5=I2C1
@@ -121,7 +122,7 @@ Mcu.IP6=I2C2
 Mcu.IP7=I2S2
 Mcu.IP8=LORAWAN
 Mcu.IP9=MISC
-Mcu.IPNb=20
+Mcu.IPNb=21
 Mcu.Name=STM32WLE5CCUx
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PB6
@@ -141,23 +142,24 @@ Mcu.Pin20=VP_ADV_TRACE_VS_ADV_TRACE
 Mcu.Pin21=VP_CRC_VS_CRC
 Mcu.Pin22=VP_LORAWAN_VS_LoRaWAN
 Mcu.Pin23=VP_MISC_VS_MISC
-Mcu.Pin24=VP_RNG_VS_RNG
-Mcu.Pin25=VP_RTC_VS_RTC_Activate
-Mcu.Pin26=VP_RTC_VS_RTC_Calendar
-Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin28=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin29=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin24=VP_PWR_V_PVD_IN
+Mcu.Pin25=VP_RNG_VS_RNG
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_RTC_VS_RTC_Calendar
+Mcu.Pin28=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin29=VP_SEQUENCER_VS_SEQUENCER
 Mcu.Pin3=PA3
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_TIMER_VS_TIMER
-Mcu.Pin32=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin30=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIMER_VS_TIMER
+Mcu.Pin33=VP_TINY_LPM_VS_TINY_LPM
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA7
 Mcu.Pin7=PA8
 Mcu.Pin8=PA9
 Mcu.Pin9=OSC_IN
-Mcu.PinsNb=33
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1);RTC_USE_HSE,0
 Mcu.UserName=STM32WLE5CCUx
@@ -290,6 +292,9 @@ PCC.Seq0.Step1.Voltage_Source=Battery
 PCC.Series=STM32WL
 PCC.Temperature=25
 PCC.Vdd=2.4
+PWR.IPParameters=PVDLevel,Mode
+PWR.Mode=PWR_PVD_MODE_IT_RISING_FALLING
+PWR.PVDLevel=PWR_PVDLEVEL_6
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -318,7 +323,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-false,10-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,11-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_ADC_Init-ADC-true-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-false,10-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,11-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_ADC_Init-ADC-true-HAL-false,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.AHBFreq_Value=12000000
 RCC.APB1Freq_Value=12000000
 RCC.APB1TimFreq_Value=12000000
@@ -386,6 +391,8 @@ VP_LORAWAN_VS_LoRaWAN.Mode=LoRaWAN_Enabled
 VP_LORAWAN_VS_LoRaWAN.Signal=LORAWAN_VS_LoRaWAN
 VP_MISC_VS_MISC.Mode=MISC_Enabled
 VP_MISC_VS_MISC.Signal=MISC_VS_MISC
+VP_PWR_V_PVD_IN.Mode=Mode_PVD_Int
+VP_PWR_V_PVD_IN.Signal=PWR_V_PVD_IN
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
